fixed alignment

--- a/style.css
+++ b/style.css
@@ -117,11 +117,11 @@ body {
 }
 
 .col-1 {
-  margin-right: 5.3rem;
+  margin-right: 5.1rem;
 }
 
 .col-2 {
-  margin-right: 4.4rem;
+  margin-right: 4.2rem;
 }
 
 .col-3 {
@@ -129,23 +129,32 @@ body {
 }
 
 .col-4 {
-  margin-right: 5.7rem;
+  margin-right: 5.4rem;
 }
 
 .col-5 {
   margin-right: 6.7rem;
 }
 
-.col-1__item:not(:last-child),
+.col-1__item:not(:last-child) {
+  margin-bottom: 3.3rem;
+}
+.col-1__item:nth-child(3) {
+  margin-bottom: 3.6rem;
+}
+
 .col-2__item:not(:last-child),
 .col-3__item:not(:last-child),
-.col-4__item:not(:last-child),
+.col-4__item:not(:last-child) {
+  margin-bottom: 4rem;
+}
+
 .col-5__item:not(:last-child) {
-  margin-bottom: 3rem;
+  margin-bottom: 4.1rem;
 }
 
 .col-6__item:not(:last-child) {
-  margin-bottom: 4rem;
+  margin-bottom: 5rem;
 }
 
 .col-1__item {
@@ -159,14 +168,24 @@ body {
 .col-5__item {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   width: 13.1rem;
   height: 4.4rem;
+  padding: .3rem;
 }
 
 .col-5__item {
-  width: 10.4rem;
+  width: 10.8rem;
   height: 4.3rem;
+}
+
+.col-1__item--description span,
+.col-2__item span,
+.col-3__item span,
+.col-4__item span {
+  margin-bottom: .5rem;
+}
+.col-5__item small {
+  margin-top: .5rem;
 }
 
 .col-1__item--description {
@@ -174,7 +193,7 @@ body {
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  padding: .3rem;
 }
 
 .col-1__item--description-name,
@@ -194,6 +213,10 @@ body {
   font-size: 1.3rem;
   font-weight: 500;
   color: #B5B5C3;
+}
+
+.col-6__item:first-child {
+  margin-top: .5rem;
 }
 
 .view-offer-btn {
